<resources>
    <string name="app_name">Tripbook</string>
    <!-- ... -->
    <string name="add_location_successful">Thanks, location added successfully!</string>
    <string name="add_rate_successful">Thanks, rate added successfully!</string>
    <string name="facebook_application_id" translatable="false">1842741196014907</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb1842741196014907</string>
    <string name="no_locations">No location found around you, add the first location with the button below or change range from preferences</string>

    <string name="no_comments">no comments</string>
    <string name="no_rate">no rating</string>
    <string name="destination_name_placeholder" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dui sapien, condimentum ac massa at, gravida sodales erat. Fusce sit amet massa vulputate,</string>
    <string name="image_placeholder">Location image</string>
    <string name="rate">Rate</string>
    <string name="location_id" translatable="false">location_id</string>
    <string name="location_key_id" translatable="false">location_key_id</string>
    <string name="location_image_byte_array_id" translatable="false">location_image_path_id</string>
    <string name="location_name_id" translatable="false">location_name_id</string>
    <string name="comments">Comments:</string>

    <string name="dummy_username">Username</string>
    <string name="dummy_date" translatable="false">1970-01-01 00:00</string>
    <string name="vote">Votes</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dui sapien, condimentum ac massa at, gravida sodales erat. Fusce sit amet massa vulputate, egestas quam at, ornare lectus. Ut tristique porttitor vehicula. Integer eget mollis enim, eget consequat arcu. Nulla facilisi. Proin sed pulvinar sem, nec convallis dui. Quisque auctor, massa non malesuada faucibus, leo turpis facilisis libero, ut consequat arcu justo id arcu. Sed convallis, lacus eu varius hendrerit, mi diam consequat ligula, eget vulputate eros erat ut quam. Phasellus placerat malesuada nisl et congue.</string>


    <string name="confirm_location">Confirm location</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyBuvaiIFh2y2aEKQcLW3E0YVCqMuMq5m3Y</string>
    <string name="action_logout">Logout</string>
    <string name="retry">Retry</string>
    <string name="around_you">Around you</string>
    <string name="kilometers_ext">Kilometers</string>
    <string name="miles_ext">Miles</string>
    <string name="kilometers">km</string>
    <string name="miles">mi</string>

    <string name="account_infos">Account infos</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="map_layout">Map layout</string>
    <string name="preferences">Preferences</string>
    <string name="preference_distance_range">Distance range from your position</string>
    <string name="preference_distance_range_key" translatable="false">range_id</string>
    <string name="preference_unit_key_title">Preferred distance unit</string>
    <string name="preference_distance_unit_key" translatable="false">unit_id</string>
    <string name="def_distance" translatable="false">50</string>
    <string name="take_photo">Take photo</string>
    <string name="cancel">Cancel</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="shared_element_transition_id" translatable="false">shared_el_transition_id</string>
    <string name="settings">Settings</string>
    <!-- Account type (for sync-adapter authenticator) -->
    <!-- TripbookSyncAdapter related -->
    <string name="sync_account_type" translatable="false">tripbook.nikogalla.com</string>
    <string name="content_authority" translatable="false">com.nikogalla.tripbook</string>

    <string name="alert_localization">Please, allow localization to have locations around you</string>
    <string name="new_locations_found">I\'ve found %1$s locations around you!</string>
    <string name="touch_to_see">Touch to see your next destinations</string>
    <!-- Sharing -->
    <string name="share_location">Share location</string>
    <string name="share_text">I\'m visiting %1$s with Tripbook!</string>
    <string name="share_intent">Select how to share your location:</string>
</resources>
