<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/preferences"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_user_account"
        android:orderInCategory="102"
        android:title="@string/account_infos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map_layout"
        android:orderInCategory="103"
        android:title="@string/map_layout"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom" />

</menu>