<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_location_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nikogalla.tripbook.LocationDetailsActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivLocationPicture"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:src="@drawable/camera_placeholder"
                android:scaleType="centerCrop" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <com.github.ornolfr.ratingview.RatingView
                        android:id="@+id/rvLocationRatings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawable_empty="@drawable/ic_star_empty"
                        app:drawable_filled="@drawable/ic_star_filled"
                        app:drawable_half="@drawable/ic_star_half"
                        app:drawable_margin="4dp"
                        app:drawable_size="24dp"
                        app:is_indicator="false"
                        app:max_count="5"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        app:rating="0" />
                    />
                    <TextView
                        android:id="@+id/tvLocationRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_rate" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ivLocationReviews"
                    android:background="@color/tw__transparent"
                    android:src="@drawable/ic_comments_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvLocationDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/comments"
                    style="@style/TextAppearance.AppCompat.Subhead" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvLocationReviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
